--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,75 @@
-<app-grid></app-grid>
+<div class="main-container">
+     <div>
+    <form [formGroup]="objectForm" class="object-form">
+      <div class="form-group">
+        <label for="width">Name:</label>
+        <input type="string" id="name" formControlName="name" />
+      </div>
+
+      <div class="form-group">
+        <label for="width">Width:</label>
+        <input type="number" id="width" formControlName="width" min="1" />
+      </div>
+    
+      <div class="form-group">
+        <label for="height">Height:</label>
+        <input type="number" id="height" formControlName="height" min="1" />
+      </div>
+    
+      <div class="form-group">
+        <label>
+          <input type="checkbox" formControlName="mustTouchWall" />
+          Must Touch Wall
+        </label>
+      </div>
+      <button (click)="onSubmit()" [disabled]="objectForm.invalid">Add Object</button>
+    </form>
+          <div *ngIf="selectedItem" class="resize-inputs">
+        <h3>Resize {{ selectedItem.name }}</h3>
+        <label>
+          Width (cm):
+          <input type="number" [(ngModel)]="inputWidthCm" (input)="updateSizeInCm()" />
+        </label>
+        <label>
+          Height (cm):
+          <input type="number" [(ngModel)]="inputHeightCm" (input)="updateSizeInCm()" />
+        </label>
+        <button (click)="rotateObject()">Rotate</button>
+      </div>
+     </div>
+
+    <div class="sidebar">
+      <h3>Available Objects</h3>
+      <ul>
+        <li
+          *ngFor="let object of items"
+          [class.selected]="selectedItem?.name === object.name"
+          (click)="selectItem(object)"
+        >
+          Object {{ object.name }} - {{ object.width / 3 }}x{{ object.height / 3 }} -
+          {{ object.mustTouchWall ? 'Must Touch Wall' : 'Free Placement' }}
+          <button (click)="removeObject(object); $event.stopPropagation();">
+            Remove
+          </button>
+        </li>
+      </ul>
+    </div>
+
+  <div class="example-boundary" [style.width.px]="boundaryWidth" [style.height.px]="boundaryHeight">
+    <div class="grid-background" [style.gridTemplateColumns]="'repeat(' + gridX + ', ' + gridCellSize + 'px)'" [style.gridTemplateRows]="'repeat(' + gridY + ', ' + gridCellSize + 'px)'">
+      <div *ngFor="let cell of gridCells" class="grid-cell"></div>
+    </div>
+
+    <div class="example-box"
+         cdkDragBoundary=".example-boundary"
+         cdkDrag
+         *ngFor="let item of items"
+         [ngStyle]="{'background-color': item == selectedItem ? 'aqua' : 'white'}"
+         [style.width.px]="item.width"
+         [style.height.px]="item.height"
+         (click)="selectItem(item)">
+      {{ item.name }}
+    </div>
+  </div>
+</div>
+
