--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
-.cdk-drag-preview {
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-    border: solid 1px black;
-  }
+body {
+  margin: 0px;
+}
