--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,12 +8,12 @@
       </div>
 
       <div class="form-group">
-        <label for="width">Width:</label>
+        <label for="width">Width (cm):</label>
         <input type="number" id="width" formControlName="width" min="1" />
       </div>
     
       <div class="form-group">
-        <label for="height">Height:</label>
+        <label for="height">Height (cm):</label>
         <input type="number" id="height" formControlName="height" min="1" />
       </div>
     
@@ -22,31 +22,60 @@
         <input type="string" id="image" formControlName="image" />
       </div>
 
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label>
           <input type="checkbox" formControlName="mustTouchWall" />
           Must Touch Wall
         </label>
-      </div>
+      </div> -->
       <button (click)="onSubmit()" [disabled]="objectForm.invalid">Add Object</button>
     </form>
 
-          <div *ngIf="selectedItem" class="resize-inputs" class="object-form">
-        <h3>Resize {{ selectedItem.name }}</h3>
-        <div class="form-group">
-          <label>
-            Width (cm):
-            <input type="number" [(ngModel)]="inputWidthCm" (input)="updateSizeInCm()" />
-          </label>
-        </div>
-        <div class="form-group">
-          <label>
-            Height (cm):
-            <input type="number" [(ngModel)]="inputHeightCm" (input)="updateSizeInCm()" />
-          </label>
-        </div>
-        <button (click)="rotateObject()">Rotate</button>
-      </div>
+    <div class="predefined-objects">
+      <h3>Select Predefined Object</h3>
+        <button class="predefined-objects-button"
+          *ngFor="let object of predefinedItems"
+          [class.selected]="selectedItem?.name === object.name"
+          (click)="addPredefinedItem(object)"
+        >
+          {{ object.name }} - {{ object.width / 3 }}x{{ object.height / 3 }}
+      </button>
+    </div>
+     </div>
+     <div class="example-boundary" [style.width.px]="boundaryWidth" [style.height.px]="boundaryHeight">
+       <div class="grid-background" [style.gridTemplateColumns]="'repeat(' + gridX + ', ' + gridCellSize + 'px)'" [style.gridTemplateRows]="'repeat(' + gridY + ', ' + gridCellSize + 'px)'">
+         <div *ngFor="let cell of gridCells; let i = index" 
+               class="grid-cell" 
+               [ngClass]="{'clicked': cell.isClicked}" 
+               (mousedown)="onMouseDown(i)"
+               (mouseup)="onMouseUp()"
+               (mouseover)="onMouseOver(i)">
+         </div>
+         <div class="example-box"
+              cdkDragBoundary=".example-boundary"
+              cdkDrag
+              *ngFor="let item of items"
+              [ngStyle]="{
+               'background-color': checkCollisionWithGridCells(item) ? 'red' : (item.isColliding ? 'red' : 'white')            
+               }"
+              [style.width.px]="item.width"
+              [style.height.px]="item.height"
+              (cdkDragMoved)="onDrag($event, item)"
+              (click)="selectItem(item)">
+         <button class="rotate-button" (click)="rotateObject()">&#10227;</button>
+         <img
+           [src]="item.image"
+           alt="{{ item.name }}"
+           class="object-image"
+           [ngStyle]="{
+             'transform': 'rotate(' + item.rotation + 'deg)',
+             'width.px': item.rotation === 90 || item.rotation === 270 ? item.height : item.width,
+             'height.px': item.rotation === 90 || item.rotation === 270 ? item.width : item.height
+           }">
+           {{ item.name }}
+         </div>
+       </div>
+   
      </div>
 <div>
 
@@ -65,52 +94,24 @@
         </li>
       </ul>
     </div>
-    <div class="predefined-objects">
-      <h3>Select Predefined Object</h3>
-        <button class="predefined-objects-button"
-          *ngFor="let object of predefinedItems"
-          [class.selected]="selectedItem?.name === object.name"
-          (click)="addPredefinedItem(object)"
-        >
-          {{ object.name }} - {{ object.width / 3 }}x{{ object.height / 3 }}
-      </button>
-    </div>
-  </div>
-
-  <div class="example-boundary" [style.width.px]="boundaryWidth" [style.height.px]="boundaryHeight">
-    <div class="grid-background" [style.gridTemplateColumns]="'repeat(' + gridX + ', ' + gridCellSize + 'px)'" [style.gridTemplateRows]="'repeat(' + gridY + ', ' + gridCellSize + 'px)'">
-      <div *ngFor="let cell of gridCells; let i = index" 
-            class="grid-cell" 
-            [ngClass]="{'clicked': cell.isClicked}" 
-            (mousedown)="onMouseDown(i)"
-            (mouseup)="onMouseUp()"
-            (mouseover)="onMouseOver(i)">
+    <div *ngIf="selectedItem" class="resize-inputs" class="object-form">
+      <h3>Resize {{ selectedItem.name }}</h3>
+      <div class="form-group">
+        <label>
+          Width (cm):
+          <input type="number" [(ngModel)]="inputWidthCm" (input)="updateSizeInCm()" />
+        </label>
       </div>
-      <div class="example-box"
-           cdkDragBoundary=".example-boundary"
-           cdkDrag
-           *ngFor="let item of items"
-           [ngStyle]="{
-            'background-color': checkCollisionWithGridCells(item) ? 'red' : (item.isColliding ? 'red' : 'white')            
-            }"
-           [style.width.px]="item.width"
-           [style.height.px]="item.height"
-           (cdkDragMoved)="onDrag($event, item)"
-           (click)="selectItem(item)">
-      <button class="rotate-button" (click)="rotateObject()">&#10227;</button>
-      <img
-        [src]="item.image"
-        alt="{{ item.name }}"
-        class="object-image"
-        [ngStyle]="{
-          'transform': 'rotate(' + item.rotation + 'deg)',
-          'width.px': item.rotation === 90 || item.rotation === 270 ? item.height : item.width,
-          'height.px': item.rotation === 90 || item.rotation === 270 ? item.width : item.height
-        }">
-        {{ item.name }}
+      <div class="form-group">
+        <label>
+          Height (cm):
+          <input type="number" [(ngModel)]="inputHeightCm" (input)="updateSizeInCm()" />
+        </label>
       </div>
+      <button (click)="rotateObject()">Rotate</button>
     </div>
 
   </div>
+
 </div>
 
