--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -192,3 +192,13 @@ button:hover {
   display: flex;
   width: 100%;
 }
+
+@media screen and (max-width: 768px) {
+  .main-container {
+    flex-direction: column;
+  }
+
+  .sidebar, .predefined-objects {
+    width: 100%;
+  }
+}
