--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,17 @@
 <div class="main-container">
      <div>
+      <div class="predefined-objects">
+        <h3>Grid size</h3>
+        <div class="form-group">
+          <label for="gridX">Grid Width (X):</label>
+          <input type="number" id="gridX" [(ngModel)]="gridX" (input)="updateGridSize(gridX, gridY)" min="1" />
+        </div>
+      
+        <div class="form-group">
+          <label for="gridY">Grid Height (Y):</label>
+          <input type="number" id="gridY" [(ngModel)]="gridY" (input)="updateGridSize(gridX, gridY)" min="1" />
+        </div>
+      </div>
     <form [formGroup]="objectForm" class="object-form">
       <h3>Create object</h3>
       <div class="form-group">
@@ -56,12 +68,12 @@
               cdkDrag
               *ngFor="let item of items"
               [ngStyle]="{
-               'background-color': checkCollisionWithGridCells(item) ? 'red' : (item.isColliding ? 'red' : 'white')            
+               'background-color': checkCollisionWithGridCells(item) ? 'rgba(134, 22, 22, 0.6)' : (item.isColliding ? 'rgba(134, 22, 22, 0.6)' : 'rgba(255, 255, 255, 0.85)')            
                }"
               [style.width.px]="item.width"
               [style.height.px]="item.height"
               (cdkDragMoved)="onDrag($event, item)"
-              (click)="selectItem(item)">
+              (mousedown)="selectItem(item)">
          <button class="rotate-button" (click)="rotateObject()">&#10227;</button>
          <img
            [src]="item.image"
@@ -84,7 +96,7 @@
       <ul>
         <li
           *ngFor="let object of items"
-          [class.selected]="selectedItem?.name === object.name"
+          [class.selected]="selectedItem?.name === object.name && selectedItem?.x === object.x"
           (click)="selectItem(object)"
         >
           {{ object.name }} - {{ object.width / 3 }}x{{ object.height / 3 }}
