--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -100,28 +100,22 @@
       </div>
     </div>
 
-    <div *ngIf="selectedItem" class="resize-inputs">
+    <div *ngIf="selectedItem">
       <h3 (click)="toggleResize()" class="collapsible-header">Resize {{ selectedItem.name }}
         <span class="arrow">{{ showResize ? '▲' : '▼' }}</span>
       </h3>
       <div *ngIf="showResize">
-      <div class="form-group">
-        <label>
-          Width (cm):
+        <div class="form-group">
+          <label for="width">Width (cm):</label>
           <input type="number" [(ngModel)]="inputWidthCm" (input)="updateSizeInCm()" />
-        </label>
-      </div>
-      <div class="form-group">
-        <label>
-          Height (cm):
+        </div>
+      
+        <div class="form-group">
+          <label for="height">Height (cm):</label>
           <input type="number" [(ngModel)]="inputHeightCm" (input)="updateSizeInCm()" />
-          <button (click)="rotateObject()">Rotate</button>
-        </label>
-      </div>
+        </div>
       </div>
     </div>
-
-
 
   </div>
 
