--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,14 +2,16 @@
   <h1>Bathroom-a-sketch</h1>
 </div>
 <div class="main-container">
-     <div>
       <div class="predefined-objects">
         <div class="sidebar">
           <h3 (click)="toggleConfigurations()" class="collapsible-header">Configurations
             <span class="arrow">{{ showConfigurations ? '▲' : '▼' }}</span>
           </h3>
-          <div *ngIf="showConfigurations">
-          <input type="string" [(ngModel)]="newSaveName" (input)="updateSizeInCm()" />
+          <div *ngIf="showConfigurations" class="inside-menu-item">
+            <div class="form-group">
+              <label for="width">Name:</label>
+              <input type="string" [(ngModel)]="newSaveName" (input)="updateSizeInCm()" />
+            </div>
           <ul>
             <button class="savebutton" (click)="saveConfiguration(newSaveName)">Save</button>
             <li *ngFor="let config of savedConfigurations" (click)="loadConfiguration(config.name)">
@@ -22,7 +24,7 @@
         <h3 (click)="toggleGridSize()" class="collapsible-header">Grid Size
           <span class="arrow">{{ showGridSize ? '▲' : '▼' }}</span>
         </h3>
-        <div *ngIf="showGridSize">
+        <div *ngIf="showGridSize" class="inside-menu-item">
         <div class="form-group">
           <label for="gridX">Grid Width (X):</label>
           <input type="number" id="gridX" [(ngModel)]="gridX" (input)="updateGridSize(gridX, gridY)" min="1" />
@@ -34,9 +36,9 @@
         </div>
     <form [formGroup]="objectForm">
       <h3 (click)="toggleCreateObject()" class="collapsible-header">Create object
-        <span class="arrow">{{ showGridSize ? '▲' : '▼' }}</span>
+        <span class="arrow">{{ showCreateObject ? '▲' : '▼' }}</span>
       </h3>
-      <div *ngIf="showCreateObject">
+      <div *ngIf="showCreateObject" class="inside-menu-item">
       <div class="form-group">
         <label for="width">Name:</label>
         <input type="string" id="name" formControlName="name" />
@@ -70,7 +72,7 @@
       <h3 (click)="togglePredefinedObjects()" class="collapsible-header">Predefined objects
         <span class="arrow">{{ showPredefinedObjects ? '▲' : '▼' }}</span>
       </h3>
-      <div *ngIf="showPredefinedObjects">
+      <div *ngIf="showPredefinedObjects" class="inside-menu-item">
         <ul>
           <li *ngFor="let object of predefinedItems" (click)="addPredefinedItem(object)" [class.selected]="selectedItem?.name === object.name">
             {{ object.name }} - {{ object.width / 3 }}x{{ object.height / 3 }}
@@ -83,7 +85,7 @@
       <h3 (click)="toggleAvailableObjects()" class="collapsible-header">Available Objects
         <span class="arrow">{{ showAvailableObjects ? '▲' : '▼' }}</span>
       </h3>
-      <div *ngIf="showAvailableObjects">
+      <div *ngIf="showAvailableObjects" class="inside-menu-item">
 
       <ul>
         <li
@@ -104,7 +106,7 @@
       <h3 (click)="toggleResize()" class="collapsible-header">Resize {{ selectedItem.name }}
         <span class="arrow">{{ showResize ? '▲' : '▼' }}</span>
       </h3>
-      <div *ngIf="showResize">
+      <div *ngIf="showResize" class="inside-menu-item">
         <div class="form-group">
           <label for="width">Width (cm):</label>
           <input type="number" [(ngModel)]="inputWidthCm" (input)="updateSizeInCm()" />
@@ -119,7 +121,6 @@
 
   </div>
 
-     </div>
      <div class="example-boundary" [style.width.px]="boundaryWidth" [style.height.px]="boundaryHeight">
        <div class="grid-background" [style.gridTemplateColumns]="'repeat(' + gridX + ', ' + gridCellSize + 'px)'" [style.gridTemplateRows]="'repeat(' + gridY + ', ' + gridCellSize + 'px)'">
          <div *ngFor="let cell of gridCells; let i = index" 
