--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -239,7 +239,7 @@ button:hover {
   //   flex-direction: column;
   // }
 
-  .sidebar, .predefined-objects {
-    // width: 100%;
-  }
+  // .sidebar, .predefined-objects {
+  //   width: 100%;
+  // }
 }
