--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,8 +2,10 @@
   <h1>Sketch-A-Room</h1>
 </div>
 <div class="main-container">
-      <div class="predefined-objects">
-        <div class="sidebar">
+      <div class="menu-items">
+        <h3 (click)="toggleClear()" class="collapsible-header">Clear
+        </h3>
+        <div class="menu-group">
           <h3 (click)="toggleConfigurations()" class="collapsible-header">Configurations
             <span class="arrow">{{ showConfigurations ? '▲' : '▼' }}</span>
           </h3>
@@ -68,7 +70,7 @@
       <button (click)="onSubmit()" [disabled]="objectForm.invalid">Add object</button>
       </div>
     </form>
-    <div class="sidebar">
+    <!-- <div class="menu-group">
       <h3 (click)="togglePredefinedObjects()" class="collapsible-header">Predefined objects
         <span class="arrow">{{ showPredefinedObjects ? '▲' : '▼' }}</span>
       </h3>
@@ -79,9 +81,37 @@
           </li>
         </ul>
       </div>
+    </div> -->
+
+    <div class="menu-group">
+      <h3 (click)="togglePredefinedObjects()" class="collapsible-header">Predefined objects
+        <span class="arrow">{{ showPredefinedObjects ? '▲' : '▼' }}</span>
+      </h3>
+      <div *ngIf="showPredefinedObjects" class="inside-menu-item ">
+        <button (click)="setViewObjects()">toggle</button>
+        <div *ngIf="toggleViewObjects"> 
+
+        <ul>
+          <li *ngFor="let object of predefinedItems" (click)="addPredefinedItem(object)" [class.selected]="selectedItem?.name === object.name">
+            {{ object.name }} - {{ object.width / 3 }}x{{ object.height / 3 }}
+          </li>
+        </ul>
+        </div>
+        <div *ngIf="!toggleViewObjects"> 
+          <div class="predefined-items-container"> 
+            <ul class="predefined-items">
+              <li *ngFor="let object of predefinedItems" (click)="addPredefinedItem(object)" [class.selected]="selectedItem?.name === object.name">
+                <img [src]="object.image" [alt]="object.name" class="object-image-thumb" />
+              </li>
+            </ul>
+          </div>
+
+        </div>
+
+      </div>
     </div>
 
-    <div class="sidebar">
+    <div class="menu-group">
       <h3 (click)="toggleAvailableObjects()" class="collapsible-header">Available objects
         <span class="arrow">{{ showAvailableObjects ? '▲' : '▼' }}</span>
       </h3>
@@ -116,49 +146,65 @@
           <label for="height">Height (cm):</label>
           <input type="number" [(ngModel)]="inputHeightCm" (input)="updateSizeInCm()" />
         </div>
+
+        <div class="form-group">
+          <label for="rotation">Rotation (degrees): {{ selectedItem.rotation }}°</label>
+          <input type="range" id="rotation" min="0" max="360" [(ngModel)]="selectedItem.rotation" (input)="rotateObjectFreely()" />
+        </div>
       </div>
     </div>
 
   </div>
 
-     <div class="example-boundary" [style.width.px]="boundaryWidth" [style.height.px]="boundaryHeight">
-       <div class="grid-background" [style.gridTemplateColumns]="'repeat(' + gridX + ', ' + gridCellSize + 'px)'" [style.gridTemplateRows]="'repeat(' + gridY + ', ' + gridCellSize + 'px)'">
-         <div *ngFor="let cell of gridCells; let i = index" 
+  <div class="grid-container">
+    <div class="horizontal-ruler" [style.width.px]="gridX * gridCellSize">
+      <div *ngFor="let x of [].constructor(gridX); let i = index">
+        {{ i * 10 }} cm
+      </div>
+    </div>
+    
+    <div class="grid-and-vertical-ruler">
+      <div class="vertical-ruler" [style.height.px]="gridY * gridCellSize">
+        <div *ngFor="let y of [].constructor(gridY); let i = index">
+          {{ i * 10 }} cm
+        </div>
+      </div>
+
+      <div class="example-boundary" [style.width.px]="boundaryWidth" [style.height.px]="boundaryHeight">
+        <div class="grid-background" 
+             [style.gridTemplateColumns]="'repeat(' + gridX + ', ' + gridCellSize + 'px)'"
+             [style.gridTemplateRows]="'repeat(' + gridY + ', ' + gridCellSize + 'px)'">
+             
+          <div *ngFor="let cell of gridCells; let i = index" 
                class="grid-cell" 
                [ngClass]="{'clicked': cell.isClicked}" 
                (mousedown)="onMouseDown(i)"
                (mouseup)="onMouseUp()"
                (mouseover)="onMouseOver(i)">
-         </div>
-         <div class="example-box"
-              cdkDragBoundary=".example-boundary"
-              cdkDrag
-              *ngFor="let item of items" 
-              [id]="item.name"
-              [ngStyle]="{
+          </div>
+          <div class="example-box"
+               cdkDragBoundary=".example-boundary"
+               cdkDrag
+               *ngFor="let item of items" 
+               [ngStyle]="{
                'transform': (item.firstLoadConfiguration ? 'translate3d(' + item.x + 'px, ' + item.y + 'px, 0)' : '(' + 0 + 'px, ' + 0 + 'px, 0)' ),
-               'background-color': checkCollisionWithGridCells(item) ? 'rgba(134, 22, 22, 0.6)' : (item.isColliding ? 'rgba(134, 22, 22, 0.6)' : 'rgba(255, 255, 255, 0.85)')            
+                 'background-color': checkCollisionWithGridCells(item) ? 'rgba(134, 22, 22, 0.6)' : (item.isColliding ? 'rgba(134, 22, 22, 0.6)' : 'rgba(255, 255, 255, 0.85)')
                }"
-              [style.width.px]="item.width"
-              [style.height.px]="item.height"
-              (cdkDragMoved)="onDrag($event, item)"
-              (mousedown)="selectItem(item)">
+               [style.width.px]="item.width"
+               [style.height.px]="item.height"
+               (cdkDragMoved)="onDrag($event, item)"
+               (mousedown)="selectItem(item)">
             <button class="rotate-button" (click)="rotateObject()">&#10227;</button>
-            <img
-              [src]="item.image"
-              alt="{{ item.name }}"
-              class="object-image"
-              [ngStyle]="{
-                'transform': 'rotate(' + item.rotation + 'deg)',
-                'width.px': item.rotation === 90 || item.rotation === 270 ? item.height : item.width,
-                'height.px': item.rotation === 90 || item.rotation === 270 ? item.width : item.height
-              }">
-           {{ item.name }}
-         </div>
-       </div>
-   
-     </div>
-
+            <button class="delete-object-button" (click)="removeObject(selectedItem)">x</button>
+            <img [src]="item.image" alt="{{ item.name }}" class="object-image"
+                 [ngStyle]="{
+                   'transform': 'rotate(' + item.rotation + 'deg)',
+                   'width.px': item.rotation === 90 || item.rotation === 270 ? item.height : item.width,
+                   'height.px': item.rotation === 90 || item.rotation === 270 ? item.width : item.height
+                 }">
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-
+</div>
