--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -49,6 +49,44 @@
   }
 }
 
+.grid-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.horizontal-ruler {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 40px; /* Space for the vertical ruler */
+  margin-bottom: 5px;
+  font-size: 12px;
+  color: #333;
+}
+
+.horizontal-ruler div {
+  flex: 1;
+  text-align: center;
+}
+
+.grid-and-vertical-ruler {
+  display: flex;
+}
+
+.vertical-ruler {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 40px;
+  margin-right: 5px;
+  font-size: 12px;
+  color: #333;
+}
+
+.vertical-ruler div {
+  text-align: right;
+}
+
 
 .example-box {
   position: absolute;
@@ -80,17 +118,17 @@ h3 {
   color: #546e7a; 
 }
 
-.sidebar {
-
+.menu-group {
+  width: 330px;
 }
 
 
-.sidebar ul {
+.menu-group ul {
   list-style-type: none;
   padding: 0;
 }
 
-.sidebar li {
+.menu-group li {
   padding: 10px;
   margin-bottom: 10px;
   background-color: #eceff1;
@@ -101,13 +139,38 @@ h3 {
   position: relative;
 }
 
-.sidebar li.selected {
+.menu-group li.selected {
   background-color: #b3e5fc; 
   border-color: #29b6f6; 
 }
 
-.sidebar li:hover {
+.menu-group li:hover {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.predefined-items-container {
+  display: flex;
+  flex-wrap: wrap;
+  // padding: 10px;
+  // max-width: 360px;
+}
+
+.predefined-items {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+}
+
+.predefined-items li {
+  // margin: 5px;
+  cursor: pointer;
+}
+
+.object-image-thumb {
+  width: 40px; 
+  height: 40px;
+  object-fit:contain;
+  // border: 1px solid #ccc;
 }
 
 .savebutton {
@@ -186,20 +249,36 @@ button:hover {
 
 .rotate-button {
   position: absolute;
+  padding: 6px 10px;
   top: 0;
   left: 0;
   background-color: transparent;
-  font-size: 24px;
+  font-size: 16px;
   color: black;
   z-index: 5;
 }
 
-.predefined-objects{
+.delete-object-button {
+  position: absolute;
+  padding: 6px 10px;
+  top: 0;
+  right: 0;
+  background-color: transparent;
+  font-size: 16px;
+  color: black;
+  z-index: 5;
+}
+
+.delete-object-button:hover {
+  background-color: #e53935;
+}
+
+.menu-items{
   height: vh;
   background-color: #546e7a;
 }
 
-.predefined-objects-button {
+.menu-items-button {
   margin: 2px;
   display: flex;
   width: 100%;
@@ -239,7 +318,7 @@ button:hover {
   //   flex-direction: column;
   // }
 
-  // .sidebar, .predefined-objects {
+  // .menu-group, .menu-items {
   //   width: 100%;
   // }
 }
